--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -12,7 +10,7 @@
 
     <groupId>com.softos.net</groupId>
     <artifactId>snmp4j-wrapper</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>SNMP4J Wrapper</name>
     <description>A small and convenient wrapper around SNMP4J.</description>
@@ -148,5 +146,6 @@
         <url>https://github.com/bnese/snmp4j-wrapper</url>
         <connection>scm:git:git://github.com/bnese/snmp4j-wrapper</connection>
         <developerConnection>scm:git:git@github.com:bnese/snmp4j-wrapper.git</developerConnection>
-    </scm>
+      <tag>v1.0.0</tag>
+  </scm>
 </project>
